# dgen

./: .gitattributes  .gitignore  CLAUDE.md  Readme.md  TODO.md  conftest.py  prompt.txt  pyproject.toml  test.sh
.claude/: settings.local.json
dcc/: __init__.py  __main__.py  cli.py
dcc2/: __init__.py  __main__.py  cli.py
dgen/: __init__.py  __main__.py  assign_to_blocks.py  block.py  builtins.py  codegen.py  compiler.py  dialect.py  diff_cli.py  error.py  graph.py  imports.py  ir_diff.py  ir_equiv.py  layout.py  memory.py  module.py  notebook.py  op.py  staging.py  syrupy_ext.py  testing.py  trait.py  type.py  value.py  verify.py
dgen_c/: __init__.py  __main__.py  cli.py
docs/: Milestone 1: Regex JIT.md  Milestone: Regex JIT.md  asm.md  block-scoping.md  blocks-and-control-flow.md  codegen.md  control-flow.md  dialect-files.md  divergence.md  effects.md  explicit-staging.md  ir-testing.md  ir_testing.md  linear_types.md  memory-and-layout.md  pass-management.md  passes.md  plan.md  staged-computation.md  staging.md  value-compilation.md  values-and-types.md
editors/: README.md
regex/: regex.dgen  regex.ir  regex.mojo
test/: conftest.py  test_algebra_to_llvm.py  test_asm_parser.py  test_autodiff.py  test_block_ops.py  test_block_params.py  test_break_continue.py  test_captures.py  test_codegen.py  test_codegen_aggregate_bundles.py  test_codegen_errors.py  test_compiler_as_pass.py  test_control_flow_to_goto_break.py  test_divergence.py  test_existential_to_memory.py  test_existential_to_record.py  test_flat_labels.py  test_function_refs.py  test_gen_ast.py  test_gen_parser.py  test_gen_python.py  test_graph.py  (+35 more)
(+550 files in other folders)
