[tool.ruff.lint]
extend-select = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"toy/test/**" = ["ANN"]
"test/**" = ["ANN"]

[project]
name = "dgen"
dependencies = [
    "click",
    "llvmlite",
]

[project.optional-dependencies]
notebook = ["ipython", "ipykernel"]
dev = ["papermill", "ipykernel", "syrupy", "pytest", "ruff"]
