[tool.ruff.lint]
extend-select = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"toy/test/**" = ["ANN"]
"test/**" = ["ANN"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselected by default, run with --slow)"]
addopts = "-m 'not slow'"

[tool.setuptools.packages.find]
include = ["dgen*", "toy*", "dcc*", "actor*", "editors*"]

[project]
name = "dgen"
version = "0.1.0"
dependencies = [
    "click",
    "llvmlite",
]

[project.optional-dependencies]
notebook = ["ipython", "ipykernel"]
dev = ["papermill", "ipykernel", "syrupy", "pytest", "ruff"]
